# character-vault

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
character-manager/: pyproject.toml
character-manager/src/adapters/inbound/: user.py
character-manager/src/domain/constants/: attribute.py  common_time.py  currency.py  feat_category.py  languages.py  magic_school.py  sources.py  tools.py
character-manager/src/domain/models/: attack.py  attribute.py  character_class.py  money.py  skill.py  spell_components.py
character-manager/src/domain/ports/outbound/: character_repository.py
character-manager/tests/factories/: character_factory.py
docker/: init-databases.sql
docs/superpowers/plans/: 2026-05-16-orchestrator-restructure.md
docs/superpowers/specs/: 2026-05-16-orchestrator-restructure-design.md
hooks/: pre-commit
src/adapters/inbound/: api.py
src/application/ports/: character_repository.py
src/application/use_cases/: create_character.py
src/domain/constants/: attribute.py  common_time.py  currency.py  damage_type.py  dice.py  feat_category.py  languages.py  magic_school.py  sources.py  tools.py
src/domain/models/: alignment.py  attack.py  attribute.py  background.py  base_class.py  character.py  character_class.py  death_saves.py  feature.py  item.py  money.py  race.py  skill.py  spell.py  spell_components.py  spell_slots.py  subrace.py
src/domain/ports/inbound/: character_repository.py
src/domain/utils/: character_utils.py
tests/: conftest.py
tests/factories/: character_factory.py
tests/unit/models/: test_character.py
