[project]
name = "character-vault"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "mangum>=0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.uv]
python-preference = "managed"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
