[project]
name = "character-vault"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "mangum>=0.19.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pylint>=3.3.8",
    "pytest>=8.4.1",
]

[tool.uv]
python-preference = "managed"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pylint.main]
# Ignore common pytest fixture pattern
disable = [
    "redefined-outer-name",  # Common in pytest fixtures
]

[tool.pylint.messages_control]
# Add any specific message controls here
max-line-length = 100
